--- a/index.ipynb
+++ b/index.ipynb
@@ -155,10 +155,9 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant('rating') >= alternative('rating'):\n",
-    "        \n",
-    "     return restaurant\n",
+    "        return restaurant\n",
     "    else:\n",
-    "        "
+    "        return restaurant"
    ]
   },
   {
